dinoco_docs/src/content/v0.0.1/ja-jp/orm/relations.mdx
export const title = "リレーション";

# リレーション

リレーションは、Dinocoスキーマ内でモデル同士を接続します。

このページでは、`@relation(...)`、`onDelete`、`onUpdate`、および最も一般的なリレーションシップパターンについて説明します。

---

## @relation(...)

`@relation(...)`属性は、2つのモデルがどのように接続されるかを定義します。

サポートされるパラメータ：

| パラメータ   | 用途                                       |
| :----------- | :----------------------------------------- |
| `name`       | リレーションの明示的な名前                 |
| `fields`     | キーとして使用されるローカルフィールド     |
| `references` | ターゲットモデルで参照されるフィールド     |
| `onDelete`   | 参照されるレコードを削除する際の動作       |
| `onUpdate`   | 参照される値を更新する際の動作             |

完全な例：

```dinoco
model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer?
	author   User?   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

## onDelete と onUpdate

Dinocoは、関連するレコードが変更または削除されたときに何が起こるかを制御するための参照アクションを公開しています。

サポートされる値：

| アクション     | 意味                                       |
| :----------- | :----------------------------------------- |
| `Cascade`    | 依存するレコードに操作を伝播する           |
| `SetNull`    | 外部キーを`null`に設定する                 |
| `SetDefault` | フィールドに設定されたデフォルト値を定義する |

例：

```dinoco
model Comment {
	id      Integer @id @default(autoincrement())
	postId  Integer?
	post    Post?   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

ローカルフィールドがオプションの場合にのみ`SetNull`を使用してください。

## 1対多

これは最も一般的なリレーションシップです。1つの親レコードが複数の子レコードを持ちます。

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String
	posts Post[]
}

model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer
	author   User    @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
```

読み方：

-   1つの`User`は複数の`Post`を持つことができます。
-   各`Post`は1つの`User`に属します。

## 多対多

多対多のリレーションシップでは、両側にリストがあります。

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String

	roles Role[]
}

model Role {
	id    Integer @id @default(autoincrement())
	name  String

	users User[]
}
```

読み方：

-   1つの`User`は複数の`Role`を持つことができます。
-   1つの`Role`は複数の`User`に属することができます。

## 自己参照リレーション

自己参照リレーションは、モデルが自分自身とリレーションを持つ場合に発生します。

```dinoco
model User {
	id        Integer @id @default(autoincrement())
	name      String
	managerId Integer?
	manager   User?   @relation(name: "UserManager", fields: [managerId], references: [id], onDelete: SetNull, onUpdate: Cascade)
	reports   User[]  @relation(name: "UserManager")
}
```

読み方：

-   ユーザーはマネージャーを持つことができます。
-   ユーザーは複数の部下を持つことができます。

## 実践的なヒント

-   同じモデル間に複数のリレーションがある場合は、`name`を使用してください。
-   子が親なしでは意味をなさない場合は、`onDelete: Cascade`を使用してください。
-   子レコードを削除せずにリレーションシップを解除できる場合は、`onDelete: SetNull`を使用してください。
-   読みやすさとコード生成を容易にするために、明示的な名前を持つ自己参照リレーションを使用してください。

## 例のリファレンススキーマ

以下の例では、次のスキーマを使用しています。

```dinoco
config {
	database = "sqlite"
	database_url = env("DATABASE_URL")
}

enum Role {
	ADMIN
	USER
}

model User {
	id             String     @id @default(uuid())
	username       String     @unique
	role           Role       @default(USER)

	profile        Profile?

	followers      User[]     @relation(name: "UserFollows")
	following      User[]     @relation(name: "UserFollows")

	posts          Post[]     @relation(name: "PostAuthor")
	comments       Comment[]  @relation(name: "CommentAuthor")

	likedPosts     Post[]     @relation(name: "PostLikers")
	likedComments  Comment[]  @relation(name: "CommentLikers")
}

model Profile {
	id      String   @id @default(uuid())
	bio     String?
	userId  String   @unique
	user    User     @relation(fields: [userId], references: [id])
}

model Post {
	id        String     @id @default(uuid())
	title     String
	content   String

	authorId  String
	author    User       @relation(name: "PostAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "PostLikers")

	comments  Comment[]

	tags      Tag[]
}

model Comment {
	id        String     @id @default(uuid())
	text      String

	parentId  String?
	parent    Comment?   @relation(name: "CommentReplies", fields: [parentId], references: [id])
	replies   Comment[]  @relation(name: "CommentReplies")

	postId    String
	post      Post       @relation(fields: [postId], references: [id])

	authorId  String
	author    User       @relation(name: "CommentAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "CommentLikers")
}

model Tag {
	id     String  @id @default(uuid())
	name   String  @unique

	posts  Post[]
}
```

## Userからのすべての可能なリレーションを含む検索の例

`User`モデルから開始し、すべての直接的なリレーションを同じ読み取りクエリでロードしたい場合は、`select::&lt;T&gt;()`と複数の`includes(...)`を組み合わせることができます。

```rust
use dinoco::{Extend, find_many};

#[derive(Debug, Clone, Extend)]
#[extend(Profile)]
struct ProfileView {
	id: String,
	bio: Option<String>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserRelationItem {
	id: String,
	username: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Tag)]
struct TagView {
	id: String,
	name: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentView {
	id: String,
	text: String,
	replies: Vec<CommentReplyView>,
	likers: Vec<UserRelationItem>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentReplyView {
	id: String,
	text: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostView {
	id: String,
	title: String,
	content: String,
	likers: Vec<UserRelationItem>,
	tags: Vec<TagView>,
	comments: Vec<CommentView>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithAllRelations {
	id: String,
	username: String,
	profile: Option<ProfileView>,
	followers: Vec<UserRelationItem>,
	following: Vec<UserRelationItem>,
	posts: Vec<PostView>,
	comments: Vec<CommentView>,
	likedPosts: Vec<PostView>,
	likedComments: Vec<CommentView>,
}

let users = find_many::<User>()
	.select::<UserWithAllRelations>()
	.includes(|user| user.profile())
	.includes(|user| user.followers())
	.includes(|user| user.following())
	.includes(|user| {
		user.posts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.comments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.includes(|user| {
		user.likedPosts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.likedComments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.execute(&client)
	.await?;
```

このパターンは、リレーション指向の単一の読み取りでユーザーの豊富なビューを構築したい場合に役立ちます。

## UserとProfileを使用したリレーション付き挿入の例

1対1のリレーションを持つレコードを挿入するには、`with_relation(...)`を使用します。

```rust
use dinoco::insert_into;

let created_user = insert_into::<User>()
	.values(User {
		id: "user-1".to_string(),
		username: "ビア".to_string(),
		role: Role::USER,
	})
	.with_relation(Profile {
		id: "profile-1".to_string(),
		bio: Some("ソフトウェアエンジニア".to_string()),
		userId: String::new(),
	})
	.execute(&client)
	.await?;
```

このフローでは：

-   `User`が最初に挿入されます。
-   関連する`Profile`が次に作成されます。
-   `userId`キーはDinocoのリレーションフローによってリンクされます。

## `with_relations(...)`を使用した`insert_many`の例

複数の親レコードを挿入し、それぞれの親レコードに対して複数の新しい関連レコードも挿入したい場合は、`with_relations(...)`を使用してください。

```rust
use dinoco::insert_many;

let posts = vec![
	Post {
		id: "post-1".to_string(),
		title: "最初の投稿".to_string(),
		content: "最初の投稿の内容".to_string(),
		authorId: "user-1".to_string(),
	},
	Post {
		id: "post-2".to_string(),
		title: "2番目の投稿".to_string(),
		content: "2番目の投稿の内容".to_string(),
		authorId: "user-1".to_string(),
	},
];

let comments_per_post = vec![
	vec![
		Comment {
			id: "comment-1".to_string(),
			text: "とても良い".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-2".to_string(),
		},
		Comment {
			id: "comment-2".to_string(),
			text: "この例が好きです".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-3".to_string(),
		},
	],
	vec![
		Comment {
			id: "comment-3".to_string(),
			text: "もっと詳細が知りたい".to_string(),
			parentId: None,
			postId: String::new(),
			authorId: "user-2".to_string(),
		},
	],
];

insert_many::<Post>()
	.values(posts)
	.with_relations(comments_per_post)
	.execute(&client)
	.await?;
```

このフローでは：

-   各`Post`が挿入されます。
-   `comments_per_post`内の各グループは、同じ位置の`Post`に対応します。
-   Dinocoは書き込み中に`Comment`を正しい投稿にリンクします。

## `with_connections(...)`を使用した`insert_many`の例

複数の親レコードを挿入し、それぞれを既存の複数のレコードに接続したい場合は、`with_connections(...)`を使用してください。

```rust
use dinoco::insert_many;

insert_many::<Post>()
	.values(vec![
		Post {
			id: "post-10".to_string(),
			title: "RustとDinoco".to_string(),
			content: "生産性に関する投稿".to_string(),
			authorId: "user-1".to_string(),
		},
		Post {
			id: "post-11".to_string(),
			title: "高度なリレーション".to_string(),
			content: "インクルードとリレーションに関する投稿".to_string(),
			authorId: "user-1".to_string(),
		},
	])
	.with_connections(vec![
		vec![
			Tag { id: "tag-1".to_string(), name: "rust".to_string() },
			Tag { id: "tag-2".to_string(), name: "orm".to_string() },
		],
		vec![
			Tag { id: "tag-2".to_string(), name: "orm".to_string() },
			Tag { id: "tag-3".to_string(), name: "sqlite".to_string() },
		],
	])
	.execute(&client)
	.await?;
```

このフローでは：

-   `Post`が挿入されます。
-   既存の`Tag`は対応する投稿に接続されます。
-   外部ベクトルの各グループは、同じ位置の投稿の接続を表します。

## 次のステップ

-   [**Enums**](/v0.0.1/orm/enums): スキーマで制御された値を表現する方法をご覧ください。
-   [**Models**](/v0.0.1/orm/models): Dinoco APIを使用したフィールド構造と検索、挿入、更新、削除の例をご覧ください。
