dinoco_docs/src/content/v0.0.2/ja-jp/orm/relations.mdx
export const title = "リレーション";

# リレーション

リレーションは、Dinocoスキーマ内のモデル同士を接続します。

このページでは、`@relation(...)`、`onDelete`、`onUpdate`、および最も一般的なリレーションシップパターンについて説明します。

---

## @relation(...)

`@relation(...)`属性は、2つのモデルがどのように接続するかを定義します。

サポートされているパラメータ:

| パラメータ    | 用途                                             |
| :----------- | :----------------------------------------------- |
| `name`       | リレーションの明示的な名前                       |
| `fields`     | キーとして使用されるローカルフィールド           |
| `references` | ターゲットモデルで参照されるフィールド           |
| `onDelete`   | 参照されるレコードを削除する際の動作             |
| `onUpdate`   | 参照される値を更新する際の動作                   |

完全な例:

```dinoco
model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer?
	author   User?   @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

## onDelete と onUpdate

Dinocoは、関連するレコードが変更または削除されたときに何が起こるかを制御するための参照アクションを公開しています。

サポートされている値:

| アクション         | 意味                                             |
| :----------- | :----------------------------------------------- |
| `Cascade`    | 操作を依存するレコードに伝播します               |
| `SetNull`    | 外部キーを`null`に設定します                     |
| `SetDefault` | フィールドに設定されたデフォルト値を定義します   |

例:

```dinoco
model Comment {
	id      Integer @id @default(autoincrement())
	postId  Integer?
	post    Post?   @relation(fields: [postId], references: [id], onDelete: Cascade, onUpdate: SetNull)
}
```

ローカルフィールドがオプションの場合にのみ`SetNull`を使用してください。

## One to many

これは最も一般的なリレーションシップです。1つの親レコードが複数の子レコードを持ちます。

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String
	posts Post[]
}

model Post {
	id       Integer @id @default(autoincrement())
	title    String
	authorId Integer
	author   User    @relation(fields: [authorId], references: [id], onDelete: Cascade, onUpdate: Cascade)
}
```

読み方:

- 1つの`User`は複数の`Post`を持つことができます。
- 各`Post`は1つの`User`に属します。

## Many to many

多対多のリレーションシップでは、両側にリストがあります。

```dinoco
model User {
	id    Integer @id @default(autoincrement())
	name  String

	roles Role[]
}

model Role {
	id    Integer @id @default(autoincrement())
	name  String

	users User[]
}
```

読み方:

- 1つの`User`は複数の`Role`を持つことができます。
- 1つの`Role`は複数の`User`に属することができます。

## Self relation

自己リレーションは、モデルが自分自身とリレーションシップを持つ場合に発生します。

```dinoco
model User {
	id        Integer @id @default(autoincrement())
	name      String
	managerId Integer?
	manager   User?   @relation(name: "UserManager", fields: [managerId], references: [id], onDelete: SetNull, onUpdate: Cascade)
	reports   User[]  @relation(name: "UserManager")
}
```

読み方:

- ユーザーはマネージャーを持つことができます。
- ユーザーは複数の部下を持つことができます。

## 実践的なヒント

- 同じモデル間に複数のリレーションがある場合は、`name`を使用します。
- 子が親なしでは意味をなさない場合は、`onDelete: Cascade`を使用します。
- 子レコードを削除せずにリレーションシップを解除できる場合は、`onDelete: SetNull`を使用します。
- 読みやすさとコード生成を容易にするために、明示的な名前で自己リレーションを使用します。

## 例の参照スキーマ

以下の例では、次のスキーマを使用しています。

```dinoco
config {
	database = "sqlite"
	database_url = env("DATABASE_URL")
}

enum Role {
	ADMIN
	USER
}

model User {
	id             String     @id @default(uuid())
	username       String     @unique
	role           Role       @default(USER)

	profile        Profile?

	followers      User[]     @relation(name: "UserFollows")
	following      User[]     @relation(name: "UserFollows")

	posts          Post[]     @relation(name: "PostAuthor")
	comments       Comment[]  @relation(name: "CommentAuthor")

	likedPosts     Post[]     @relation(name: "PostLikers")
	likedComments  Comment[]  @relation(name: "CommentLikers")
}

model Profile {
	id      String   @id @default(uuid())
	bio     String?
	userId  String   @unique
	user    User     @relation(fields: [userId], references: [id])
}

model Post {
	id        String     @id @default(uuid())
	title     String
	content   String

	authorId  String
	author    User       @relation(name: "PostAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "PostLikers")

	comments  Comment[]

	tags      Tag[]
}

model Comment {
	id        String     @id @default(uuid())
	text      String

	parentId  String?
	parent    Comment?   @relation(name: "CommentReplies", fields: [parentId], references: [id])
	replies   Comment[]  @relation(name: "CommentReplies")

	postId    String
	post      Post       @relation(fields: [postId], references: [id])

	authorId  String
	author    User       @relation(name: "CommentAuthor", fields: [authorId], references: [id])

	likers    User[]     @relation(name: "CommentLikers")
}

model Tag {
	id     String  @id @default(uuid())
	name   String  @unique

	posts  Post[]
}
```

## Userからの可能なすべてのリレーションを含む検索例

Userモデルから開始し、すべての直接リレーションを同じ読み取りクエリでロードしたい場合は、`select::<T>()`と複数の`includes(...)`を組み合わせることができます。

```rust
use dinoco::{Extend, find_many};

#[derive(Debug, Clone, Extend)]
#[extend(Profile)]
struct ProfileView {
	id: String,
	bio: Option<String>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserRelationItem {
	id: String,
	username: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Tag)]
struct TagView {
	id: String,
	name: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentView {
	id: String,
	text: String,
	replies: Vec<CommentReplyView>,
	likers: Vec<UserRelationItem>,
}

#[derive(Debug, Clone, Extend)]
#[extend(Comment)]
struct CommentReplyView {
	id: String,
	text: String,
}

#[derive(Debug, Clone, Extend)]
#[extend(Post)]
struct PostView {
	id: String,
	title: String,
	content: String,
	likers: Vec<UserRelationItem>,
	tags: Vec<TagView>,
	comments: Vec<CommentView>,
}

#[derive(Debug, Clone, Extend)]
#[extend(User)]
struct UserWithAllRelations {
	id: String,
	username: String,
	profile: Option<ProfileView>,
	followers: Vec<UserRelationItem>,
	following: Vec<UserRelationItem>,
	posts: Vec<PostView>,
	comments: Vec<CommentView>,
	likedPosts: Vec<PostView>,
	likedComments: Vec<CommentView>,
}

let users = find_many::<User>()
	.select::<UserWithAllRelations>()
	.includes(|user| user.profile())
	.includes(|user| user.followers())
	.includes(|user| user.following())
	.includes(|user| {
		user.posts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.comments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.includes(|user| {
		user.likedPosts()
			.includes(|post| post.likers())
			.includes(|post| post.tags())
			.includes(|post| {
				post.comments()
					.includes(|comment| comment.replies())
					.includes(|comment| comment.likers())
			})
	})
	.includes(|user| {
		user.likedComments()
			.includes(|comment| comment.replies())
			.includes(|comment| comment.likers())
	})
	.execute(&client)
	.await?;
```

このパターンは、リレーション指向の単一の読み取りでユーザーの豊富なビューを構築したい場合に役立ちます。

## UserとProfileを使用したリレーション付き挿入の例

新しいAPIを使用して1対1のリレーションを持つレコードを挿入するには、`#[insertable]`でマークされた`Extend`ペイロード内にリレーションを配置します。

```rust
use dinoco::insert_into;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(User)]
#[insertable]
struct UserWithProfile {
	id: String,
	username: String,
	role: Role,
	profile: Option<Profile>,
}

let created_user = insert_into::<User>()
	.values(UserWithProfile {
		id: "user-1".to_string(),
		username: "bia".to_string(),
		role: Role::USER,
		profile: Some(Profile {
			id: "profile-1".to_string(),
			bio: Some("Engenheira de software".to_string()), // ソフトウェアエンジニア
			userId: String::new(),
		}),
	})
	.execute(&client)
	.await?;
```

このフローでは:

- まず`User`が挿入されます。
- 次に、関連する`Profile`が作成されます。
- Dinocoのリレーションフローによって`userId`キーがリンクされます。

## ネストされたリレーションを持つinsert_manyの例

複数の親レコードを挿入し、それぞれに対して複数の新しい関連レコードも挿入したい場合は、`#[insertable]`を使用します。

```rust
use dinoco::insert_many;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
#[insertable]
struct PostWithComments {
	id: String,
	title: String,
	content: String,
	authorId: String,
	comments: Vec<Comment>,
}

let posts = vec![
	PostWithComments {
		id: "post-1".to_string(),
		title: "Primeiro post".to_string(), // 最初の投稿
		content: "Conteudo do primeiro post".to_string(), // 最初の投稿の内容
		authorId: "user-1".to_string(),
		comments: vec![
			Comment {
				id: "comment-1".to_string(),
				text: "Muito bom".to_string(), // とても良い
				parentId: None,
				postId: String::new(),
				authorId: "user-2".to_string(),
			},
			Comment {
				id: "comment-2".to_string(),
				text: "Gostei do exemplo".to_string(), // 例が気に入った
				parentId: None,
				postId: String::new(),
				authorId: "user-3".to_string(),
			},
		],
	},
	PostWithComments {
		id: "post-2".to_string(),
		title: "Segundo post".to_string(), // 2番目の投稿
		content: "Conteudo do segundo post".to_string(), // 2番目の投稿の内容
		authorId: "user-1".to_string(),
		comments: vec![
			Comment {
				id: "comment-3".to_string(),
				text: "Quero mais detalhes".to_string(), // もっと詳細が知りたい
				parentId: None,
				postId: String::new(),
				authorId: "user-2".to_string(),
			},
		],
	},
];

insert_many::<Post>()
	.values(posts)
	.execute(&client)
	.await?;
```

このフローでは:

- 各`Post`が挿入されます。
- Dinocoはネストされた`Comment`を作成し、書き込み中に各グループを正しい`Post`にリンクします。

## ネストされた接続を持つinsert_manyの例

複数の親レコードを挿入し、それぞれを既存の複数のレコードに接続したい場合は、コード生成によって生成された`PostConnection` enumを使用します。

```rust
use dinoco::insert_many;

#[derive(Debug, Clone, dinoco::Extend)]
#[extend(Post)]
#[insertable]
struct PostWithTags {
	id: String,
	title: String,
	content: String,
	authorId: String,
	tags: Vec<PostConnection>,
}

insert_many::<Post>()
	.values(vec![
		PostWithTags {
			id: "post-10".to_string(),
			title: "Rust e Dinoco".to_string(), // RustとDinoco
			content: "Post sobre produtividade".to_string(), // 生産性に関する投稿
			authorId: "user-1".to_string(),
			tags: vec![
				PostConnection::Tag("tag-1".to_string()),
				PostConnection::Tag("tag-2".to_string()),
			],
		},
		PostWithTags {
			id: "post-11".to_string(),
			title: "Relações avançadas".to_string(), // 高度なリレーション
			content: "Post sobre includes e relacoes".to_string(), // インクルードとリレーションに関する投稿
			authorId: "user-1".to_string(),
			tags: vec![
				PostConnection::Tag("tag-2".to_string()),
				PostConnection::Tag("tag-3".to_string()),
			],
		},
	])
	.execute(&client)
	.await?;
```

このフローでは:

- Postが挿入されます。
- 既存のTagは対応する投稿に接続されます。
- 各ペイロードは、コード生成によって生成されたenumを使用して接続を定義します。

## 次のステップ

- [**Enums**](/v0.0.2/orm/enums): スキーマで制御された値を表現する方法を確認します。
- [**Models**](/v0.0.2/orm/models): Dinoco APIを使用したフィールド構造と検索、挿入、更新、削除の例を確認します。
